--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for MERN App
 on:
   push:
     branches:
-      - main  # Change this if your deployment branch is different
+      - main  # Change to your deployment branch if needed
   pull_request:
     branches:
       - main
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Node.js 16
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16  # Use a stable version to avoid OpenSSL issues
           cache: "npm"
 
       - name: Install dependencies
@@ -34,12 +34,12 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      - name: Upload Build Artifacts
+      - name: Upload Build Artifacts  # 🔥 Fix: Ensure correct artifact upload
         uses: actions/upload-artifact@v3
         with:
-          name: build
+          name: build-artifact
           path: build/
-  
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -48,13 +48,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Download Build Artifacts
+      - name: Download Build Artifacts  # 🔥 Fix: Ensure correct artifact download
         uses: actions/download-artifact@v3
         with:
-          name: build
+          name: build-artifact
           path: build/
 
-      # If deploying to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
