--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,7 @@
-name: CI/CD Pipeline for MERN App
+name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main  # Change to your deployment branch if needed
-  pull_request:
     branches:
       - main
 
@@ -19,48 +16,19 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16  # Use a stable version to avoid OpenSSL issues
-          cache: "npm"
+          node-version: '16'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Set OpenSSL Legacy Provider
-        run: echo "NODE_OPTIONS=--openssl-legacy-provider" >> $GITHUB_ENV
-
-      - name: Run Tests
+      - name: Run tests
         run: npm test
 
-      - name: Build Project
+      - name: Build project
         run: npm run build
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-           name: build-artifact
-           path: build/
-
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Download Build Artifacts  
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifact
-          path: build/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-
-      - name: Clear GitHub Actions Cache
-        run: rm -rf ~/.npm ~/.cache
-
